--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "googlebooks-app",
+  "name": "tech-matchup-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "server/dist/server.js",
   "scripts": {
     "start": "node server/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
+    "server": "cd server && npm start",
+    "server:dev": "cd server && npm run dev",
     "install": "cd server && npm i && cd ../client && npm i",
+    "client:build": "cd client && npm run build",
+    "client:dev": "cd client && npm run dev",
+    "seed": "cd server && npm run seed",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
-    "render-build":"npm install && npm run build"
+    "render-build": "npm install && npm run build",
+    "set-up": "npm install && npm run build && npm run seed && npm run start:dev"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "concurrently": "^8.2.2"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.0"
+    "wait-on": "^7.2.0"
   }
 }
